se separa el join de empezar el match